# made_with_gemini

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pull-request.yml  python-tests.yml
direct_api/: README.md
direct_api/image_based/: README.md
direct_api/renovation_agent/: README.md  agent.py  rennovate.md
direct_api/text_based/: README.md
direct_api/video_based/: README.md
gcp_powered/: Dockerfile  README.md  agent.py  tools.yaml
gcp_powered/image_based/: README.md
gcp_powered/image_based/renovation_helper/: README.md
gcp_powered/text_based/: README.md
gcp_powered/video_based/: README.md
tests/: README.md  test_basic.py
