[project]
name = "made-with-gemini"
version = "0.1.0"
description = "This repository contains a collection of tools and examples for building applications with Google Gemini AI."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Ravi Kumar Chavva", email = "ravikumarchavva@outlook.com" }
]
dependencies = [
    "google-adk>=1.3.0",
    "google-genai>=1.20.0",
]
